--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
